--- a/config/rubocop/rubocop.yml
+++ b/config/rubocop/rubocop.yml
@@ -423,5 +423,5 @@ Style/HashTransformKeys:
 Style/HashTransformValues:
   Enabled: true
 
-Style/Documentation:
-  Enabled: false
+# Style/Documentation:
+  # Enabled: false
