--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -12,26 +12,5 @@ AllCops:
 RSpec/MultipleExpectations:
   Max: 6
 
-# RSpec/MultipleMemoizedHelpers:
-#   max: 6
-describe "GET /api_v1_articles" do
-  subject { get(api_v1_articles_path) }
-  # before { create_list(:article, 3)}
-
-  let!(:article1) { create(:article, updated_at: 1.days.ago) }
-  let!(:article2) { create(:article, updated_at: 2.days.ago) }
-  let!(:article3) { create(:article) }
-
-  it "article の一覧が取得できる" do
-    subject
-    res = JSON.parse(response.body)
-
-    expect(res.length).to eq 3
-    expect(res[0].keys).to eq ["id", "title", "updated_at", "user"]
-    expect(response).to have_http_status(:ok)
-    expect(res.map {|d| d["id"] }).to eq [article3.id, article1.id, article2.id]
-    expect(res[0]["user"].keys).to eq ["id", "name", "email"]
-    # Article.create! valid_attributes
-    # expect(response).to be_successful
-  end
-end
+RSpec/MultipleMemoizedHelpers:
+  Max: 6
